syntax = "proto3";
package booksapp;

service BookInfo {
  rpc addBook(Book) returns (BookID);
  rpc getBook(BookID) returns (Book);
  rpc getSize(BookID) returns (BookSize);
  rpc DeleteBook(BookID) returns (BookID);
  rpc GetAllBooks(BookID) returns (BookMapList);
  rpc UpdateBook(Book) returns (Book);
}

message Book {
  string Id = 1;
  string Title = 2;
  string Edition = 3;
  string Copyright = 4;
  string Language = 5;
  string Pages = 6;
  string Author = 7;
  string Publisher = 8;
}

message BookID {
  string value = 1;
}

message BookSize {
  string size = 1;
}

message Result {
  string result = 1;
}

message BookMapList {
  map<string,Book> list = 1;
}